src/objects/Agency_Fee_Field_History__c.object
<CustomObject>
    <fields>
        <fullName>Amended_By__c</fullName>
        <label>Amended By</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Record_Name__c</fullName>
        <label>Object Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Agency Fee - Field History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FH-{000000000}</displayFormat>
        <label>Agency Fee - Field History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Fee - Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>